Menü Modülü Eklendi. Ön yüzde sayfalama özelliği tamamlandı.

--- a/src/views/admin/content/content-add.ejs
+++ b/src/views/admin/content/content-add.ejs
@@ -46,6 +46,11 @@
                                                 class="form-control">
                                         </div>
                                         <div class="form-control mb-2">
+                                            <label class="form-label" for="pageSlug">Page Slug</label>
+                                            <input type="text" name="pageSlug" value="" id="pageSlug"
+                                                class="form-control">
+                                        </div>
+                                        <div class="form-control mb-2">
                                             <label class="form-label" for="pageDesciption">Page Desciption</label>
                                             <textarea name="pageDesciption" id="pageDesciption" class="form-control" rows="5"></textarea>
                                         </div>
