--- a/src/views/layouts/navigation.ejs
+++ b/src/views/layouts/navigation.ejs
@@ -46,6 +46,12 @@
                     <span> Pages </span>
                 </a>
             </li>
+            <li class="side-nav-item">
+                <a href="/admin/menu/menu-list" class="side-nav-link">
+                    <i class="ri-layout-line"></i>
+                    <span> Menu </span>
+                </a>
+            </li>
 
             <li class="side-nav-item">
                 <a data-bs-toggle="collapse" href="#sidebarPages" aria-expanded="false" aria-controls="sidebarPages" class="side-nav-link">
