--- a/src/views/site/index.ejs
+++ b/src/views/site/index.ejs
@@ -1,1 +1,8 @@
 hello
+<ul class="navbar-nav">
+  <% headerMenus.forEach(function(menu) { %>
+    <li class="nav-item">
+      <a class="nav-link" href="<%= menu.url %>"><%= menu.title %></a>
+    </li>
+  <% }) %>
+</ul>
