Ürün ve Kategori Modülü Eklendi.

--- a/src/views/layouts/navigation.ejs
+++ b/src/views/layouts/navigation.ejs
@@ -52,6 +52,18 @@
                     <span> Menu </span>
                 </a>
             </li>
+            <li class="side-nav-item">
+                <a href="/admin/product/product-list" class="side-nav-link">
+                    <i class="ri-shopping-basket-2-fill"></i>
+                    <span> Products </span>
+                </a>
+            </li>
+            <li class="side-nav-item">
+                <a href="/admin/category/category-list" class="side-nav-link">
+                    <i class="ri-shopping-basket-2-fill"></i>
+                    <span> Categories </span>
+                </a>
+            </li>
 
             <li class="side-nav-item">
                 <a data-bs-toggle="collapse" href="#sidebarPages" aria-expanded="false" aria-controls="sidebarPages" class="side-nav-link">
