Müşteri Yönetimi Entegre Edildi

--- a/src/views/layouts/navigation.ejs
+++ b/src/views/layouts/navigation.ejs
@@ -64,6 +64,12 @@
                     <span> Categories </span>
                 </a>
             </li>
+            <li class="side-nav-item">
+                <a href="/admin/customer/customer-list" class="side-nav-link">
+                    <i class="ri-customer-service-2-fill"></i>
+                    <span> Customers </span>
+                </a>
+            </li>
 
             <li class="side-nav-item">
                 <a data-bs-toggle="collapse" href="#sidebarPages" aria-expanded="false" aria-controls="sidebarPages" class="side-nav-link">
