--- a/src/views/site/blog-detail.ejs
+++ b/src/views/site/blog-detail.ejs
@@ -3,8 +3,8 @@
   <div class="support-area res-mrg-md-mt pb-70">
     <div class="container">
       <div class="row">
-      <h1><%= content.title %></h1>  
-      <%= content.description %>
+      <h1><%= blog.title %></h1>  
+      <%= blog.content %>
       </div>
     </div>
   </div> 
